--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Tama</title>
+    <title>Merry Christmas</title>
 </head>
 <body>
     <div id="snowflakeContainer">
@@ -13,7 +13,7 @@
       </div>
       <section class="contentWelcome">
         <div class="col-lg-6" id="holidayMessage">
-          <h1>Chúc<br />Tưm Hạnh Phút</h1>
+          <h1>Chúc<br />Merry Christmas Day</h1>
         </div>
       
         <div class="col-lg-5" id="snowGlobe">
